erDiagram
    ORGANIZATION ||--o{ USER : "employs"
    ORGANIZATION ||--o{ PROJECT : "owns"
    ORGANIZATION ||--o{ LABEL : "defines"
    ORGANIZATION ||--o{ AUDIT_LOG : "records"

    USER ||--o{ AUTH_ACCOUNT : "authenticates via"
    USER ||--o{ PROJECT_MEMBER : "is member of"
    USER ||--o{ ISSUE : "assigned to / reported"
    USER ||--o{ COMMENT : "authors"
    USER ||--o{ ATTACHMENT : "uploads"
    USER ||--o{ NOTIFICATION : "receives"

    PROJECT ||--o{ PROJECT_MEMBER : "has"
    PROJECT ||--o{ SPRINT : "has"
    PROJECT ||--o{ ISSUE : "contains"

    SPRINT ||--o{ ISSUE : "scopes (optional)"

    ISSUE ||--o{ COMMENT : "has"
    ISSUE ||--o{ ATTACHMENT : "has"
    ISSUE ||--o{ ISSUE_LABEL : "tagged with"
    ISSUE ||--o{ ISSUE : "epic parent of"
    COMMENT ||--o{ COMMENT : "replies to (one level)"
    LABEL ||--o{ ISSUE_LABEL : "applied to"

    ORGANIZATION {
        string id PK
        string name
        string domain
    }
    USER {
        string id PK
        string organizationId FK
        string email UK
        string name
        string orgRole
        boolean isActive
        boolean notificationsEnabled
    }
    AUTH_ACCOUNT {
        string id PK
        string userId FK
        string provider
        string providerAccountId
    }
    PROJECT {
        string id PK
        string organizationId FK
        string key UK
        string name
        string status
        int issueKeyCounter
    }
    PROJECT_MEMBER {
        string id PK
        string projectId FK
        string userId FK
        string role
    }
    SPRINT {
        string id PK
        string projectId FK
        string name
        string status
        datetime startDate
        datetime endDate
    }
    ISSUE {
        string id PK
        string projectId FK
        string key UK
        string type
        string title
        string status
        string priority
        string assigneeId FK
        string reporterId FK
        string sprintId FK
        string epicId FK
        float boardOrder
    }
    LABEL {
        string id PK
        string organizationId FK
        string name
        string color
    }
    ISSUE_LABEL {
        string issueId FK
        string labelId FK
    }
    COMMENT {
        string id PK
        string issueId FK
        string authorId FK
        string parentCommentId FK
        string body
    }
    ATTACHMENT {
        string id PK
        string issueId FK
        string uploadedById FK
        string fileName
        string storageKey
    }
    NOTIFICATION {
        string id PK
        string userId FK
        string type
        string entityType
        string entityId
        boolean isRead
    }
    AUDIT_LOG {
        string id PK
        string organizationId FK
        string actorId FK
        string action
        string entityType
        string entityId
    }
